# app/Models/Book.php
@@ -5,6 +5,66 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *     schema="Book",
+ *     title="Book",
+ *     description="Book model",
+ *     @OA\Property(
+ *         property="id",
+ *         type="integer",
+ *         format="int64",
+ *         description="ID of the book",
+ *         example="1"
+ *     ),
+ *     @OA\Property(
+ *         property="title",
+ *         type="string",
+ *         description="Title of the book",
+ *         example="Book Title"
+ *     ),
+ *     @OA\Property(
+ *         property="author",
+ *         type="string",
+ *         description="Author of the book",
+ *         example="Author Name"
+ *     ),
+ *     @OA\Property(
+ *         property="genre",
+ *         type="string",
+ *         description="Genre of the book",
+ *         example="Genre"
+ *     ),
+ *     @OA\Property(
+ *         property="price",
+ *         type="number",
+ *         format="float",
+ *         description="Price of the book",
+ *         example="100.00"
+ *     ),
+ *     @OA\Property(
+ *         property="quantity",
+ *         type="integer",
+ *         description="Quantity of the book",
+ *         example="10"
+ *     ),
+ *     @OA\Property(
+ *         property="created_at",
+ *         type="string",
+ *         format="date-time",
+ *         description="Created at",
+ *         example="2021-08-01T00:00:00Z"
+ *     ),
+ *     @OA\Property(
+ *         property="updated_at",
+ *         type="string",
+ *         format="date-time",
+ *         description="Updated at",
+ *         example="2021-08-01T00:00:00Z"
+ *     )
+ * )
+ */
+
 class Book extends Model
 {
     use HasFactory;
